--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" />
-    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>React Apxp</title>
+    <title>Tip Calculator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
   </body>
 </html>
